# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.154 2005/01/26 15:34:28 wolf31o2 Exp $

  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Fixed find line for new stage1 /var/db/pkg.

  25 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added code to clean up /var/db/pkg, while still keeping the CONTENTS,
  COUNTER and ebuilds. This should keep a stage1 useable, while still keeping
  its size small.

  24 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Removed gpm changes, as it has been moved to livecd-tools and autoconfig,
  added net.ethX symlinks, and added copying of files from
  /usr/lib/hotplug/firmware into firmware tarball.

  23 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh:
  Firmware updated to use new /lib/firmware directory.

  16 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
  fix from pvdabeel@gentoo.org. patch fixes a small bug that caused grp to not
  work when both -f and -C were used on the command line.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-packages.sh, targets/stage1/stage1-chroot.sh,
  targets/stage3/stage3-chroot.sh:
  Added a portage version check to each target that uses --newuse to ensure a
  high enough version is used. This resolves bug #75336.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Possible local.start fix for beejay.

  12 Jan 2005; John Davis <zhen@gentoo.org>
  modules/embedded.py:
  kernel building patch for embedded from mutex@gentoo.org (bug #76542)

  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>