@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.154 2005/01/26 15:34:28 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.155 2005/01/26 21:59:40 wolf31o2 Exp $
+
+  26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
+  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-kernel.sh,
+  targets/netboot/netboot-packages.sh,
+  targets/tinderbox/tinderbox-chroot.sh:
+  Updated to use package.use correctly. Blame Robert Paskowitz
+  <rpaskowitz@confucius.ca> from the gentoo-catalyst mailing list.
 
   26 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/stage1/stage1-preclean2-chroot.sh:
